--- a/generators/common/src-webforms/App_LocalResources/View.ascx.resx
+++ b/generators/common/src-webforms/App_LocalResources/View.ascx.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="View.MenuItem.Title" xml:space="preserve">
-    <value>Edit Module</value>
+    <value>Add New Item</value>
   </data>
   <data name="ModuleHelp.Text" xml:space="preserve">
     <value>&lt;p&gt;No information at this time.&lt;/p&gt;</value>
